<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/black"
    tools:context=".TargetItemActivity" >

    <TextView
        android:id="@+id/sh_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="@string/sh_activity_targetitem_tv_textview1"
        android:textColor="@android:color/white"
        android:textSize="60dp" />

    <TextView
        android:id="@+id/sh_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sh_textView1"
        android:layout_centerHorizontal="true"
        android:text="@string/sh_activity_targetitem_tv_distance"
        android:textColor="@android:color/white"
        android:textSize="150dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sh_textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sh_distance"
        android:layout_centerHorizontal="true"
        android:text="@string/sh_activity_targetitem_tv_textview2"
        android:textColor="@android:color/white"
        android:textSize="60dp" />

</RelativeLayout>
